Resolve Bugs found by Sonar